--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>My test page</title>
     <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
     <link href="styles/style.css" rel="stylesheet" type="text/css">
+	<link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
   </head>
   <body>
     <h1>Mozilla is cool</h1>
