--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 		<meta property="og:image" content="https://developer.cdn.mozilla.net/static/img/opengraph-logo.dc4e08e2f6af.png">
 		<meta property="og:description" content="The Mozilla Developer Network (MDN) provides information about Open Web technologies including HTML, CSS, and APIs for both Web sites and HTML5 Apps. It also documents Mozilla products, like Firefox OS.">
 		<meta property="og:title" content="Mozilla Developer Network">
-   		 <title>My test page</title>
-   	 <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
-   	 <link href="styles/style.css" rel="stylesheet" type="text/css">
-	<link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
+	 	<title>My test page</title>
+		<link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
+		<link href="styles/style.css" rel="stylesheet" type="text/css">
+		//<link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
+		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	  </head>
 	  <body>
 		<h1>Mozilla is cool</h1>
