--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 	 	<title>My test page</title>
 		<link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
 		<link href="styles/style.css" rel="stylesheet" type="text/css">
-		//<link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
-		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+		<link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
 	  </head>
 	  <body>
 		<h1>Mozilla is cool</h1>
@@ -30,6 +29,6 @@
 		<p>Read the <a href="mozilla-manifesto.html">Mozilla Manifesto</a> to learn even more about the values and principles that guide the pursuit of our mission.</p>
 
 		<button>Change user</button>
-		<script src="scripts/main.js"></script>
+		<script src="scripts/main.js" defer></script>
 	</body>
 </html>
