--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 	  <body>
 		<h1>Mozilla is cool</h1>
 		<img src="images/200px-image-1.png" alt="The Firefox logo: a flaming fox surrounding the Earth." height="100px" width="auto">
-
+		<br>
+		<audio controls src="../../../Desktop/56978832.mp3"></audio>
+		<br>
+		<video controls width="250" src="../../../Desktop/Plant 2 (6).mp4"></video>
 		<p>At Mozilla, we’re a global community of</p>
 
 		<ul> <!-- changed to list in the tutorial -->
